--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,27 +4,27 @@
 
 :root {
   /* #region  /**=========== Primary Color =========== */
-  /* !STARTERCONF Customize these variable, copy and paste from /styles/colors.css for list of colors */
-  --tw-color-primary-50: 240 249 255;
-  --tw-color-primary-100: 224 242 254;
-  --tw-color-primary-200: 186 230 253;
-  --tw-color-primary-300: 125 211 252;
-  --tw-color-primary-400: 56 189 248;
-  --tw-color-primary-500: 14 165 233;
-  --tw-color-primary-600: 2 132 199;
-  --tw-color-primary-700: 3 105 161;
-  --tw-color-primary-800: 7 89 133;
-  --tw-color-primary-900: 12 74 110;
-  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f0f9ff */
-  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #e0f2fe */
-  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #bae6fd */
-  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #7dd3fc */
-  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #38bdf8 */
-  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #0ea5e9 */
-  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #0284c7 */
-  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #0369a1 */
-  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #075985 */
-  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #0c4a6e */
+  --tw-color-primary-50: 250 245 255;
+  --tw-color-primary-100: 243 232 255;
+  --tw-color-primary-200: 233 213 255;
+  --tw-color-primary-300: 216 180 254;
+  --tw-color-primary-400: 192 132 252;
+  --tw-color-primary-500: 168 85 247;
+  --tw-color-primary-600: 147 51 234;
+  --tw-color-primary-700: 126 34 206;
+  --tw-color-primary-800: 107 33 168;
+  --tw-color-primary-900: 88 28 135;
+  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #faf5ff */
+  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #f3e8ff */
+  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #e9d5ff */
+  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #d8b4fe */
+  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #c084fc */
+  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #a855f7 */
+  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #9333ea */
+  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #7e22ce */
+  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #6b21a8 */
+  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #581c87 */
+
   /* #endregion  /**======== Primary Color =========== */
 }
 
@@ -116,3 +116,51 @@
     background-size: 0 2px, 100% 2px;
   }
 }
+
+/* #region  /**=========== Datepicker =========== */
+.react-datepicker-wrapper {
+  display: block;
+  width: 100%;
+}
+
+.react-datepicker__navigation.react-datepicker__navigation--previous,
+.react-datepicker__navigation.react-datepicker__navigation--next {
+  top: 6px;
+}
+
+.react-datepicker__header__dropdown.react-datepicker__header__dropdown--select {
+  padding: 0 5px;
+}
+
+.react-datepicker__header__dropdown {
+  margin-top: 0.5rem;
+}
+
+.react-datepicker__year-select,
+.react-datepicker__month-select {
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  padding-left: 0.7rem;
+  border-radius: 0.25rem;
+}
+
+/* Selected date color */
+.react-datepicker__day--selected,
+.react-datepicker__day--in-selecting-range,
+.react-datepicker__day--in-range,
+.react-datepicker__month-text--selected,
+.react-datepicker__month-text--in-selecting-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--selected,
+.react-datepicker__quarter-text--in-selecting-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--selected,
+.react-datepicker__year-text--in-selecting-range,
+.react-datepicker__year-text--in-range,
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected,
+.react-datepicker__quarter-text--keyboard-selected,
+.react-datepicker__year-text--keyboard-selected {
+  @apply !bg-primary-500;
+}
+/* #endregion  /**======== Datepicker =========== */
