--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,17 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  /* Your default theme */
+  background-color: #e0e0e0;
+}
+
+[data-theme='dark'] {
+  background-color: #050505;
+}
+
 @layer base {
-  /* inter var - latin */
   @font-face {
-    font-family: 'Inter';
+    font-family: 'Proxima Nova';
+    src: url('/fonts/Proxima-Nova-Regular.woff2') format('woff2');
+    font-weight: normal;
     font-style: normal;
-    font-weight: 100 900;
-    font-display: optional;
-    src: url('/fonts/inter-var-latin.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
-      U+2215, U+FEFF, U+FFFD;
   }
 
   .cursor-newtab {
@@ -54,10 +58,6 @@
     /* 1100px */
     max-width: 68.75rem;
     @apply mx-auto w-11/12;
-  }
-
-  .bg-dark a.custom-link {
-    @apply border-gray-200 hover:border-gray-200/0;
   }
 
   /* Class to adjust with sticky footer */
