--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,22 +11,6 @@
   background-color: #050505;
 }
 
-html {
-  background: linear-gradient(120deg, #ff0000 0%, #2400ff 100%),
-    linear-gradient(120deg, #fa00ff 0%, #208200 100%),
-    linear-gradient(130deg, #00f0ff 0%, #000000 100%),
-    radial-gradient(110% 140% at 15% 90%, #ffffff 0%, #1700a4 100%),
-    radial-gradient(100% 100% at 50% 0%, #ad00ff 0%, #00ffe0 100%),
-    radial-gradient(100% 100% at 50% 0%, #00ffe0 0%, #7300a9 80%),
-    linear-gradient(30deg, #7ca304 0%, #2200aa 100%);
-  background-blend-mode: overlay, color, overlay, difference, color-dodge,
-    difference, normal;
-}
-
-body {
-  background-color: rgba(5, 5, 5, 0.8);
-}
-
 @layer base {
   @font-face {
     font-family: 'Proxima Nova';
@@ -37,8 +21,22 @@ body {
 
   @font-face {
     font-family: 'Proxima Nova';
+    src: url('/fonts/Proxima-Nova-Semibold.woff2') format('woff2');
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Proxima Nova';
     src: url('/fonts/Proxima-Nova-Bold.woff2') format('woff2');
     font-weight: bold;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Proxima Nova';
+    src: url('/fonts/Proxima-Nova-Extrabold.woff2') format('woff2');
+    font-weight: 800;
     font-style: normal;
   }
 
@@ -96,5 +94,28 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0px 0px 20px rgba(235, 0, 255, 0.72);
+  }
+
+  .text-gradient-green {
+    background: #00c637;
+    background: -webkit-linear-gradient(
+      to bottom right,
+      #00c637 0%,
+      #00763d 100%
+    );
+    background: -moz-linear-gradient(to bottom right, #00c637 0%, #00763d 100%);
+    background: linear-gradient(to bottom right, #00c637 0%, #00763d 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .border-bottom-gradient {
+    border-bottom: 3px solid transparent;
+    border-image: linear-gradient(to left, #a005ff 0%, #ff16cc 100%);
+    border-image-slice: 1;
+  }
+
+  .button-shadow-default {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 }
