refactor: minor chnages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,10 @@
   background-color: #050505;
 }
 
+html {
+  scroll-behavior: 'smooth';
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
