feat: :recycle: layout now in _app

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,15 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+.content {
+  opacity: 0;
+  transition: 1s;
+}
+
+.fadeInContent {
+  opacity: 1;
+}
+
 @layer base {
   @font-face {
     font-family: 'Inter';
