--- a/src/styles/gradients.css
+++ b/src/styles/gradients.css
@@ -70,9 +70,8 @@
 .rounded-corners-gradient-borders {
   padding-top: 0.3em;
   padding-bottom: 0.3em;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
   border-radius: 1rem;
-  background: linear-gradient(45deg, #040f36 0%, #2f033f 100%);
-
-  transition: transform 0.6s cubic-bezier(0.76, 0, 0.24, 1),
-    box-shadow 0.8s cubic-bezier(0.76, 0, 0.24, 1);
+  background: linear-gradient(45deg, #041553 0%, #38004e 100%);
 }
