--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,7 +45,9 @@ select::-ms-expand {
 @layer base {
   @font-face {
     font-family: 'Inter';
-    src: url('/fonts/Inter-Variable') format('ttf');
+    src: url('/fonts/Inter-ExtraBold.woff2') format('woff2');
+    font-weight: 800;
+    font-style: normal;
   }
 
   @font-face {
@@ -87,12 +89,12 @@ select::-ms-expand {
 
   h1,
   .h1 {
-    @apply font-primary text-4xl font-bold md:text-5xl;
+    @apply font-primary text-4xl font-bold text-white md:text-5xl;
   }
 
   h2,
   .h2 {
-    @apply font-primary text-xl font-bold md:text-3xl;
+    @apply font-primary text-2xl font-bold text-white md:text-3xl;
   }
 
   h3,
